fix wrong padding value for work showcase seciton

--- a/index.css
+++ b/index.css
@@ -286,7 +286,7 @@ body {
 }
 
 .wrapper.wrapper-work-showcase-1 {
-  padding: 5% 10%;
+  padding: 8% 10%;
   color: white;
   font-size: 1rem;
   display: flex;
@@ -678,14 +678,14 @@ div.card img {
     font-size: 2.5rem;
   }
 }
-
-@media all and (max-width: 400px) {
-  div.card {
-    padding: 20px;
+@media all and (max-width: 450px) {
+  .wrapper.wrapper-methodology h1 {
+    font-size: 3rem;
   }
 }
 @media all and (max-width: 400px) {
   div.card {
+    padding: 20px;
     height: 300px;
   }
 }
